--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </hedaer>
 
     <div id="mainvisual" class="container">
-      <img src="img/top2.jpg">
+      <img src="top2.jpg">
       <p>元人事給与アプリケーションエンジニアが未経験のWEBコーダーを目指しています。</p>  
 
     </div>
@@ -31,7 +31,7 @@
     <section id ="about" class="container">
         <h2 class="section-title">About</h2>
         <div class="content">
-          <img src="img/myface2.jpg">
+          <img src="myface2.jpg">
           <div class="text">
             <h3 class="content-title">Yuko Segawa</h3>
             <p>7歳と5歳の子供を育児中の専業主婦です。<br>
